--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^2.2.4",
     "@types/node": "22.15.23",
     "@types/react": "19.1.6",
     "@types/react-dom": "19.1.5",
+    "axios": "^1.9.0",
     "next": "15.3.2",
     "react": "19.1.0",
     "react-dom": "19.1.0",
